--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </h1>
 
           <h4 class="vote-para mb-3">Election Day Nov 5 – Early Voting starts Oct 15</h4>
-
+          <h6 class="vote-para mb-3">Paid for by Committee to Elect Scott Hilton</h6>
         </div>
       </div>
     </div>
