--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,7 +16,7 @@
   <script src="js/script.js"></script>
 
   <link rel="shortcut icon" href="images/Hilton-Logo.png" type="image/png">
-  <title>Scott Hilton</title>
+  <title>Privacy Policy | Scott Hilton</title>
 </head>
 
 <body>
@@ -32,13 +32,17 @@
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link" href="meet-scott.html">Meet Scott</a>
+            <a class="nav-link" href="meet-scott.html">
+              Meet Scott
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="constituent-services.html">Constituent Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="priorities.html">Priorities</a>
+            <a class="nav-link" href="priorities.html">
+              Priorities
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="endorsements.html">Endorsements</a>
@@ -66,15 +70,10 @@
   <section class="banner">
     <div class="container">
       <div class="row align-items-center position-relative">
-        <div class="col-lg-6 order-lg-2 order-0">
-          <div class="image-box image-box-top-left image-box-blue">
-            <img src="images/scott-hilton.png" alt="Scott Hilton">
-          </div>
+        
 
-        </div>
-
-        <div class="col-lg-6">
-          <h1 class="banner-heading text-center">RESULTS MATTER.</h1>
+        <div class="col-lg-12">
+          <h1 class="banner-heading2">Privacy Policy</h1>
         </div>
 
 
@@ -83,69 +82,64 @@
   </section>
 
 
-  <section class=" py-5">
-    <h4 class="text-center font-playfair fst-italic mb-3">Get involved today!</h4>
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <form class="newsletter-form" method="post">
-            <div class="mb-3 form-desktop-1">
-              <input type="text" class="form-control" id="nameInput" placeholder="Name" required>
-            </div>
-            <div class="mb-3 form-desktop-1">
-              <input type="email" class="form-control" id="emailInput" placeholder="Email" required>
-            </div>
-            <div class="mb-3 form-desktop-full">
-              <input type="tel" class="form-control" id="phoneInput" placeholder="Phone" required>
-              <span class="text-muted d-block pt-3">By submitting a mobile number, you consent to receive text updates.</span>
-            </div>
-            <div class="mb-3 form-check form-desktop-2">
-              <input type="checkbox" class="form-check-input" id="yardSignCheck">
-              <label class="form-check-label" for="yardSignCheck">Take a yard sign</label>
-            </div>
-            <div class="mb-3 form-check form-desktop-2">
-              <input type="checkbox" class="form-check-input" id="volunteerCheck">
-              <label class="form-check-label" for="volunteerCheck">Volunteer</label>
-            </div>
-            <div class="mb-3 form-check form-desktop-2">
-              <input type="checkbox" class="form-check-input" id="questionsCommentsCheck">
-              <label class="form-check-label" for="questionsCommentsCheck">Get more info on the campaign</label>
-            </div>
-
-            <button type="submit" class="btn-red mb-2 form-desktop-3">I'M IN!</button>
-          </form>
-        </div>
-      </div>
-    </div>
-
-
-  </section>
 
 
   <!-- section 3 -->
 
   <section>
 
-    <div class="container">
-      <div class="row pb-5">
-        <div class="col-md-9 mx-auto text-center">
+    <div class="container text-center text-sm-start">
 
+      <div class="row mt-3 py-5 align-items-start align-items-lg-center">
+        
 
-          <p style="font-size: 0.95rem;">
-            We need lawmakers in the State House who will do what they say and will lead effectively for our community.
-            <br><br>
-            Scott Hilton strives to serve our district with integrity, honesty, and effectiveness. He is the right voice
-            for us because he understands the unique issues that affect our area. Scott is a Peachtree Corners resident
-            with deep ties to North Fulton - he has been a fixture in our community for nearly two decades.
-            <br><br>
-            Scott values excellent schools and strong public safety because he’s a loving father of three. He’s
-            concerned about our economy and local businesses because he’s a businessman and a taxpayer. He leads with
-            integrity because he knows our district won’t accept any less.
+        <div class="col-lg-12">
+
+          <h2 class="font-playfair fst-italic fw-normal">Model Privacy Page Language:</h2>
+
+          <h3 class="text-dark-blue">Privacy Policy</h3>
+
+          <p>
+            We understand the importance of protecting your personal information. This Privacy Policy describes how we collect, use, and disclose your personal information when you use our website. By using our website, you consent to the collection and use of your personal information as described in this Privacy Policy.
           </p>
+
+          <h3 class="text-dark-blue">Collection of Personal Information</h3>
+
+          <p>
+            When you visit our website, we may collect certain personal information from you, including your name, email address, phone number, and other contact information. We may also collect other information about your usage of our website, such as your IP address, browser type, and operating system.
+          </p>
+
+          <h3 class="text-dark-blue">Use of Personal Information</h3>
+
+          <p>We may use your personal information to:</p>
+
+          <ul>
+              <li>Provide and improve our website and services</li>
+              <li>Respond to your inquiries and requests</li>
+              <li>Communicate with you about our services, promotions, and events</li>
+              <li>Personalize your experience on our website</li>
+              <li>Analyze and monitor usage of our website</li>
+              <li>Comply with legal obligations</li>
+              <li>Disclosure of Personal Information</li>
+          </ul>
+
+          <p>Your data will not be sold and will not be used for lead generation or affiliate marketing. We may disclose your personal information to third-party service providers who assist us in providing our services, such as hosting providers, payment processors, and analytics providers. We may also disclose your personal information if required by law or to protect our legal rights.</p>
+
+          <h3 class="text-dark-blue">Cookies and Other Tracking Technologies</h3>
+
+          <p>We may use cookies and other tracking technologies to collect information about your usage of our website and to personalize your experience. You can choose to accept or decline cookies. If you decline cookies, some features of our website may not be available to you.</p>
+
+          <h3 class="text-dark-blue">Security of Personal Information</h3>
+
+          <p>We take reasonable measures to protect your personal information from unauthorized access, disclosure, and use. However, no security measures are perfect, and we cannot guarantee the security of your personal information.</p>
+
+
         </div>
       </div>
+
+
+
+
     </div>
 
   </section>
@@ -227,19 +221,6 @@
   </footer>
 
 
-  <script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=s645c8ek&n=n1.ratufa.io"></script>
-
-  <style>
-    .ratufa-popup-title {
-      display: none !important;
-    }
-
-    .ratufa-popup-container {
-      display: flex;
-      align-items: center;
-      text-align: center;
-    }
-  </style>
 </body>
 
 </html>
