--- a/constituent-services.html
+++ b/constituent-services.html
@@ -109,7 +109,7 @@
 
             <div class="col-lg-8 col-md-7 font-playfair">
 
-              <h2 class="font-playfair fst-italic fw-normal mb-4">Scott’s priority is to serve you.</h2>
+              <h2 class="font-playfair fst-italic fw-normal mb-4 text-center text-sm-start">Scott’s priority is to serve you.</h2>
 
 
               <p>
@@ -138,7 +138,7 @@
 
           <div class="row pb-5 pt-3 align-items-start align-items-lg-center">
 
-            <h2 class="font-playfair fst-italic fw-normal mb-4">I am interested in:</h2>
+            <h2 class="font-playfair fst-italic fw-normal mb-4 text-center text-sm-start">I am interested in:</h2>
 
             <form class="newsletter-form newsletter-form-full" method="post">
               <div class="mb-3 form-desktop-1">
@@ -229,7 +229,7 @@
           </h1>
 
           <h4 class="vote-para mb-3">Election Day Nov 5 – Early Voting starts Oct 15</h4>
-          <h6 class="vote-para mb-3">Paid for by Committee to Elect Scott Hilton</h6>
+
         </div>
       </div>
     </div>
@@ -267,11 +267,16 @@
             <a class="footer-link" href="constituent-services.html">Constituent Services</a>
             <a class="footer-link" href="priorities.html">Priorities</a>
             <a class="footer-link" href="endorsements.html">Endorsements</a>
+            <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
             <a class="footer-donate-btn" href="https://give.secure.donateright.com/hilton/donate"
               target="_blank">Donate</a>
           </div>
 
 
+        </div>
+
+        <div class="col-12">
+          <p class="mb-0 text-white text-center pt-4">Paid for by Committee to Elect Scott Hilton</p>
         </div>
       </div>
 
