--- a/endorsements.html
+++ b/endorsements.html
@@ -103,7 +103,7 @@
 
         </div>
 
-        <div class="col-lg-9 col-md-8">
+        <div class="col-lg-9 col-md-8 text-center text-sm-start">
 
           <h5 class="font-playfair fst-italic fw-normal">“Hardworking families in House District 48 know the kind of
             person and true leader that Rep. Scott Hilton is. He has fully supported our legislative agenda of cutting
@@ -131,7 +131,7 @@
 
         <div class="col-lg-9 col-md-8">
 
-          <h5 class="font-playfair fw-normal">Endorsed by the National Federation of Independent Business</h5>
+          <h5 class="font-playfair fw-normal text-center text-sm-start">Endorsed by the National Federation of Independent Business</h5>
 
         </div>
       </div>
@@ -227,7 +227,7 @@
           </h1>
 
           <h4 class="vote-para mb-3">Election Day Nov 5 – Early Voting starts Oct 15</h4>
-          <h6 class="vote-para mb-3">Paid for by Committee to Elect Scott Hilton</h6>
+
         </div>
       </div>
     </div>
@@ -265,11 +265,16 @@
             <a class="footer-link" href="constituent-services.html">Constituent Services</a>
             <a class="footer-link" href="priorities.html">Priorities</a>
             <a class="footer-link" href="endorsements.html">Endorsements</a>
+            <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
             <a class="footer-donate-btn" href="https://give.secure.donateright.com/hilton/donate"
               target="_blank">Donate</a>
           </div>
 
 
+        </div>
+
+        <div class="col-12">
+          <p class="mb-0 text-white text-center pt-4">Paid for by Committee to Elect Scott Hilton</p>
         </div>
       </div>
 
