--- a/priorities.html
+++ b/priorities.html
@@ -93,7 +93,7 @@
 
   <section>
 
-    <div class="container">
+    <div class="container text-center text-sm-start">
 
       <div class="row mt-3 pt-5 align-items-start align-items-lg-center">
         <div class="col-lg-3 col-md-4 pb-4 pb-md-0">
@@ -224,7 +224,7 @@
           </h1>
 
           <h4 class="vote-para mb-3">Election Day Nov 5 – Early Voting starts Oct 15</h4>
-          <h6 class="vote-para mb-3">Paid for by Committee to Elect Scott Hilton</h6>
+
         </div>
       </div>
     </div>
@@ -262,11 +262,16 @@
             <a class="footer-link" href="constituent-services.html">Constituent Services</a>
             <a class="footer-link" href="priorities.html">Priorities</a>
             <a class="footer-link" href="endorsements.html">Endorsements</a>
+            <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
             <a class="footer-donate-btn" href="https://give.secure.donateright.com/hilton/donate"
               target="_blank">Donate</a>
           </div>
 
 
+        </div>
+
+        <div class="col-12">
+          <p class="mb-0 text-white text-center pt-4">Paid for by Committee to Elect Scott Hilton</p>
         </div>
       </div>
 
