--- a/endorsements.html
+++ b/endorsements.html
@@ -170,6 +170,7 @@
           <h5 class="fw-bold">JOHNS CREEK</h5>
 
           <ul class="squar-list">
+            <li>Mayor John Bradberry</li>
             <li>Council Member Stacy Skinner</li>
             <li>Council Member Bob Erramilli</li>
             <li>Council Member Larry DiBiase</li>
