--- a/endorsements.html
+++ b/endorsements.html
@@ -161,6 +161,7 @@
 
           <ul class="squar-list">
             <li>School Board Member-Elect Steve Gasper</li>
+            <li>Gwinnett Forum Editor/Publisher Elliott Brack</li>
           </ul>
 
 
