--- a/endorsements.html
+++ b/endorsements.html
@@ -137,6 +137,22 @@
       </div>
 
 
+      <div class="row pt-4 align-items-start align-items-lg-center">
+        <div class="col-lg-3 col-md-4 pb-4 pb-md-0">
+
+
+          <img src="images//Hiltonpba.png" alt="Scott Hilton">
+
+
+        </div>
+
+        <div class="col-lg-9 col-md-8">
+
+          <h5 class="font-playfair fw-normal text-center text-sm-start">Endorsed by the Police Benevolent Association of Georgia</h5>
+
+        </div>
+      </div>
+
       <div class="row pt-5 pb-5">
         <div class="col-sm-6">
           <h5 class="fw-bold">ALPHARETTA</h5>
