--- a/endorsements.html
+++ b/endorsements.html
@@ -176,6 +176,7 @@
           <h5 class="fw-bold">GWINNETT COUNTY</h5>
 
           <ul class="squar-list">
+            <li>School Board Member Dr. Mary Kay Murphy</li>
             <li>School Board Member-Elect Steve Gasper</li>
             <li>Gwinnett Forum Editor/Publisher Elliott Brack</li>
           </ul>
@@ -211,7 +212,7 @@
             <li>Council Member Allen Sells</li>
             <li>Council Member Christine Hall</li>
             <li>Council Member David Johnson</li>
-            <li>Council Member Lee Hills</li>
+          
           </ul>
 
 
